[project]
name = "echoprime"
version = "0.1.0"
description = "EchoPrime: multimodal echocardiography foundation model"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.30",
    "numpy>=1.24",
    "ipywidgets>=8.1",
    "opencv-python-headless>=4.5",
    "polars>=0.15",
    "pydicom>=2.3",
    "pytorch-lightning>=2.2",
    "PyWavelets>=1.4",
    "wandb>=0.16",
    "mysql-connector-python>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo_prime", "utils"]
