[project]
name = "echoprime"
version = "0.1.0"
description = "EchoPrime: multimodal echocardiography foundation model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.30",
    "numpy>=1.24",
    "ipywidgets>=8.1",
    "opencv-python-headless>=4.5",
    "polars>=0.15",
    "pydicom>=2.3",
    "pytorch-lightning>=2.2",
    "PyWavelets>=1.4",
    "wandb>=0.16",
    "mysql-connector-python>=8.0",
]

# -----------------------------
# PyTorch variants
# -----------------------------

[project.optional-dependencies]
cpu = [
    "torch>=2.1",
    "torchvision>=0.16",
]

cuda118 = [
    "torch==2.1.0",
    "torchvision==0.16.0",
]

cuda121 = [
    "torch==2.2.2",
    "torchvision==0.17.2",
]

dev = [
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# -----------------------------
# uv configuration
# -----------------------------

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda118" },
        { extra = "cuda121" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]

torchvision = [
    { index = "pytorch-cu118", extra = "cuda118" },
    { index = "pytorch-cu121", extra = "cuda121" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true